--- a/webroot/estilos/estilosMenu.css
+++ b/webroot/estilos/estilosMenu.css
@@ -16,16 +16,18 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this t
 }
 
 .menu1, .menu2, .menu3{
-    position: relative;
+    display: block;
     width: 100%;
+    min-width: 300px;
     border-radius: 10px;
     padding: 30px;
+    margin: 0 auto;
     flex-direction: row;
     justify-items: center;
     align-items: center;
 }
 
-.menu1 .btn, .menu3 .btn{
+.menu1 .btn, .menu2 .btn, .menu3 .btn{
     width: 100px;
     height: 50px;
     text-align: center;
@@ -52,12 +54,14 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this t
 
 .menu1 .cont1 .palabras{
     display: flex;
-    flex-flow: wrap;
+    flex-flow: column;
     width: 100%;
     padding: 20px;
     background-color: skyblue;
     justify-content: space-around;
     border-radius: 0 0 5px 5px;
+    word-break: break-word;
+    text-align: center;
 }
 
 
@@ -65,6 +69,7 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this t
     border-collapse: collapse;
     
 }
+
 .menu2 .cont2 .contsopa .sopa td{
     text-align: center;
     width: 25px;
@@ -135,15 +140,21 @@ Click nbfs://nbhost/SystemFileSystem/Templates/ClientSide/css.css to edit this t
     color: lightgray;
 }
 
-@media(max-width: 920px){
+@media(max-width: 1080px){
     .menu1, .menu2, .menu3{
-        padding: 10px;
+        width: 400px;
+        padding: 70px;
         flex-direction: column;
+        text-align: left;
     }
     
     .menu2 td{
         min-width: 25px;
         min-height: 25px;
+    }
+    
+    .menu2 .cont2 .contsopa table{
+        max-width: 480px;
     }
     
     .menu3 .cont3 .puntuacion table{
